sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: not found: value j
			if(plusPetit(getValeur(i),getValeur(j)))
                                                            ^AlgBubbleSort1:16: error: not found: value j
				echange(i,j);
                                          ^