sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
	
	var indic :Boolean = false;
	
	do
	{
		indic=false;
		var length :Int = getNombreValeurs();
		
		for(i<-0 to length-2)
		{
			if(plusPetit(getValeur(i),getValeur(j)))
			{
				echange(i,j);
				indic= true;
			}
		}
		
		
	}
	while(indic==true)
	
}
